# code-impact-analyzer

./: .gitignore  BOOLEAN_CONSTANT_FIX.md  CACHE_ANALYSIS.md  CACHE_REMOVAL_SUMMARY.md  CHANGES.md  COLLECTION_FACTORY_IMPLEMENTATION.md  CONTEXT_TRANSFER_VERIFICATION.md  CROSS_FILE_TYPE_INFERENCE.md  CollectionFactoryTest.java  ENUM_IMPLEMENTATION_COMPLETE.md  ENUM_METHOD_RETURN_TYPE_FIX.md  ENUM_TYPE_RECOGNITION_SUMMARY.md  FIELD_MODIFICATION_CHECKLIST.md  FIELD_MODIFICATION_INTEGRATION.md  FIELD_MODIFICATION_SUMMARY.md  FIX_FULL_QUALIFIED_NAME.md  FOR_LOOP_VARIABLE_FIX.md  GENERIC_PARAMETER_FIX.md  HashMap优化总结.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_HTTP_ANNOTATION_SUMMARY.md  INTERFACE_RESOLUTION_DESIGN.md  INTERFACE_RESOLUTION_SUMMARY.md  INTERFACE_UPSTREAM_FIX.md  INTERFACE_UPSTREAM_IMPLEMENTATION.md  LAMBDA_FUNCTION_PARAMETER_FIX.md  LAMBDA_PARAMETER_CAPITALIZE_FIX.md  LOCAL_VARIABLE_FIX_SUMMARY.md  LOCAL_VARIABLE_ISSUE.md  MAPPER_FEATURE_SUMMARY.md  MAPPER_IMPLEMENTATION_CHECKLIST.md  METHOD_SIGNATURE_IMPLEMENTATION.md  MULTI_THREAD_PROGRESS_SUMMARY.md  PARAMETER_FULL_QUALIFIED_NAME.md  PROJECT_INDEX_IMPLEMENTATION.md  RETURN_TYPE_FULL_PACKAGE_FIX.md  RETURN_TYPE_INDEX.md  SELF_METHOD_CALL_VERIFICATION.md  SELF_TYPE_TEST_REPORT.md  STATIC_METHOD_CALL_SUMMARY.md  (+16 more)
code-impact-analyzer/: CHANGELOG_FEIGN.md  CHANGELOG_MAPPER.md  CHANGELOG_PATCH_FIX.md  Cargo.toml  DEBUG_LOGGING.md  ENUM_TYPE_INFERENCE.md  EVENT_MESSAGE_DATA_CONSUMER_SUPPORT.md  FEIGN_CLIENT_SUPPORT.md  FIELD_MODIFICATION_FEATURE.md  GRAPH_TRANSFORMATION.md  GRAPH_TRANSFORMATION_IMPLEMENTATION.md  (+31 more)
(+43 files in other folders)
