[package]
name = "code_impact_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
gitpatch = "0.7"
petgraph = "0.6"
quick-xml = "0.36"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = { version = "0.17", features = ["rayon"] }

[dev-dependencies]
proptest = "1.5"
tempfile = "3.8"
